--- a/index.html
+++ b/index.html
@@ -526,10 +526,10 @@ body {
             <span class="price-amount">₹65</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (Circle/Heart/Flower)</span>
             <span class="price-amount">₹70</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <p class="shape-note">100g standard: Square, Oval, Rectangle</p>
         </div>
       </div>
 
@@ -569,14 +569,14 @@ body {
             <span class="price-amount">₹50</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Standard)</span>
+            <span class="price-size">100g (Rectangle)</span>
             <span class="price-amount">₹65</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (Wavy)</span>
             <span class="price-amount">₹70</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <!--p class="shape-note">100g standard:  Rectangle</p-->
         </div>
       </div>
 
@@ -620,7 +620,7 @@ body {
             <span class="price-amount">₹80</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (Heart/Wavy)</span>
             <span class="price-amount">₹85</span>
           </div>
           <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
@@ -714,10 +714,10 @@ body {
             <span class="price-amount">₹75</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (Circle/Flower)</span>
             <span class="price-amount">₹80</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <p class="shape-note">100g standard: Square, Oval, Rectangle</p>
         </div>
       </div>
 
@@ -823,10 +823,10 @@ body {
             <span class="price-amount">₹65</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (With Leaves)</span>
             <span class="price-amount">₹70</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <p class="shape-note">100g standard: Square, Circle, Oval</p>
         </div>
       </div>
 
@@ -836,7 +836,7 @@ body {
         <div class="soap-header">
           <div class="soap-icon">🍫</div>
           <div class="soap-title-group">
-            <h4 class="soap-name">Chocolate Dream</h4>
+            <h4 class="soap-name">Cocoa Dream</h4>
             <p class="skin-type">Dry/Sensitive skin</p>
           </div>
         </div>
@@ -866,14 +866,14 @@ body {
             <span class="price-amount">₹70</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Standard)</span>
+            <span class="price-size">100g (Rainbow)</span>
             <span class="price-amount">₹90</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (Flower)</span>
             <span class="price-amount">₹95</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <!--p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p-->
         </div>
       </div>
 
@@ -912,15 +912,15 @@ body {
             <span class="price-size">75g (Oval)</span>
             <span class="price-amount">₹60</span>
           </div>
-          <div class="price-row">
+          <!--div class="price-row">
             <span class="price-size">100g (Standard)</span>
             <span class="price-amount">₹75</span>
-          </div>
+          </div-->
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (HoneyBee)</span>
             <span class="price-amount">₹80</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <!--p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p-->
         </div>
       </div>
 
@@ -979,10 +979,10 @@ body {
             <span class="price-amount">₹80</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (Engraved)</span>
             <span class="price-amount">₹85</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <p class="shape-note">100g standard: Square, Circle</p>
         </div>
       </div>
 
@@ -1026,10 +1026,10 @@ body {
             <span class="price-amount">₹80</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (Engraved)</span>
             <span class="price-amount">₹85</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <p class="shape-note">100g standard: Square, Circle</p>
         </div>
       </div>
 
@@ -1073,10 +1073,10 @@ body {
             <span class="price-amount">₹75</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (With Leaves)</span>
             <span class="price-amount">₹80</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <p class="shape-note">100g standard: Circle, Oval, Rectangle</p>
         </div>
       </div>
 
@@ -1178,14 +1178,14 @@ body {
             <span class="price-amount">₹70</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Standard)</span>
+            <span class="price-size">100g (Flower)</span>
             <span class="price-amount">₹90</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (Heart with Rose Petals)</span>
             <span class="price-amount">₹95</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <!--p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p-->
         </div>
       </div>
 
@@ -1232,7 +1232,7 @@ body {
             <span class="price-size">100g (Heart/Flower)</span>
             <span class="price-amount">₹80</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <p class="shape-note">100g standard: Engraved Oval, Rectangle</p>
         </div>
       </div>
 
@@ -1272,14 +1272,14 @@ body {
             <span class="price-amount">₹65</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Standard)</span>
+            <span class="price-size">100g (Square)</span>
             <span class="price-amount">₹80</span>
           </div>
           <div class="price-row">
-            <span class="price-size">100g (Heart/Flower)</span>
+            <span class="price-size">100g (Engraved)</span>
             <span class="price-amount">₹85</span>
           </div>
-          <p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p>
+          <!--p class="shape-note">100g standard: Square, Circle, Oval, Rectangle</p-->
         </div>
       </div>
 
