updated chamomile soap name

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@ body {
         <div class="soap-header">
           <div class="soap-icon">🍫</div>
           <div class="soap-title-group">
-            <h4 class="soap-name">Cocoa Dream</h4>
+            <h4 class="soap-name">Golden Meadow</h4>
             <p class="skin-type">Dry/Sensitive skin</p>
           </div>
         </div>
@@ -856,7 +856,7 @@ body {
           </div>
           <div class="benefit-item">
             <span class="benefit-icon">✓</span>
-            <span>Luxurious chocolate aroma</span>
+            <span>Luxurious chamomile aroma</span>
           </div>
         </div>
         <div class="size-pricing">
